# smbcloud-cli

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.MD  SECURITY.md  install-unix.sh  install-windows.sh  server.json
crates/cli/: Cargo.toml  README.md
crates/cli/src/: ci.rs  interface.rs  lib.rs  mail.rs  main.rs  mcp.rs  session_config.rs
crates/cli/src/account/: cli.rs  lib.rs  mod.rs
crates/cli/src/cli/: mod.rs
crates/cli/src/cloud-auth/: auth_app.rs  cli.rs  mod.rs  process.rs  render.rs  url_builder.rs
crates/cli/src/cloud-deploy/: process_migrate.rs  setup.rs  setup_create_new_project.rs
crates/cli/src/cloud-mail/: cli.rs  current_project.rs  mod.rs  process.rs  render.rs
crates/cli/src/deploy/: config.rs  detect_runner.rs  git.rs  known_hosts.rs  mod.rs  process_deploy.rs  process_deploy_nextjs_ssr.rs  process_deploy_rails.rs  process_deploy_rust.rs  process_deploy_swift.rs  process_deploy_vite_spa.rs  process_migrate.rs  remote_messages.rs  remote_url.rs  rsync_deploy.rs  setup.rs  setup_create_new_project.rs  setup_project.rs  setup_select_project.rs  smb_config.rs
crates/cli/src/github/: cli.rs  process.rs
crates/cli/src/mail/: process.rs
crates/cli/src/project/: cli.rs  crud_create.rs  crud_delete.rs  crud_read.rs  crud_update.rs  current_project.rs  deploy_target.rs  deployment.rs  mod.rs  process.rs  runner.rs
crates/cli/src/tenant/: cli.rs  mod.rs  process.rs  render.rs  request.rs  tenant_client.rs  url_builder.rs
crates/cli/src/token/: clear_smb_token.rs  get_smb_token.rs  is_logged_in.rs  mod.rs  smb_token_file_path.rs  test_token_validity.rs
crates/cli/src/ui/: confirm_dialog.rs  deployment_detail_view.rs  deployment_table.rs  me_view.rs  mod.rs  plain.rs  project_detail_view.rs  project_table.rs  prompt.rs  reporter.rs  theme.rs
crates/gresiq/: Cargo.toml  README.md
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/smbcloud-auth/: Cargo.toml  README.md
crates/smbcloud-auth-sdk/: Cargo.toml  README.md
crates/smbcloud-auth-sdk-apple/: Cargo.toml
crates/smbcloud-auth-sdk-apple/src/: smbcloud_auth_sdk_apple.rs
crates/smbcloud-auth-sdk-py/: Cargo.toml  LICENSE  README.md
crates/smbcloud-auth-sdk-py/src/: lib.rs
crates/smbcloud-auth-sdk-wasm/: Cargo.toml  README.md
crates/smbcloud-auth-sdk-wasm/src/: apple.rs  lib.rs  login.rs  me.rs  remove.rs
crates/smbcloud-auth-sdk/src/: apple.rs  client_credentials.rs  lib.rs  login.rs  logout.rs  me.rs  oidc.rs  remove.rs  reset_password.rs  signup.rs
crates/smbcloud-auth-wasm/: Cargo.toml  README.md
crates/smbcloud-auth-wasm/src/: apple.rs  lib.rs  login.rs  logout.rs  me.rs  remove.rs  signup.rs
crates/smbcloud-auth/src/: apple.rs  lib.rs  login.rs  logout.rs  me.rs  remove.rs  resend_email_verification.rs  resend_reset_password_instruction.rs  signup.rs
crates/smbcloud-auth/src/oauth/: get_account_status.rs  get_consent_url.rs  get_profile.rs  mod.rs  (+1 more)
crates/smbcloud-deploy/: Cargo.toml  README.md
crates/smbcloud-deploy/src/: build.rs  error.rs  lib.rs  report.rs  runner.rs  transport.rs
crates/smbcloud-email-sdk/: Cargo.toml  README.md
crates/smbcloud-email-sdk/src/: client.rs  client_credentials.rs  error.rs  message.rs  smbcloud_email_sdk.rs
crates/smbcloud-gresiq/: Cargo.toml  README.md
crates/smbcloud-gresiq-sdk/: Cargo.toml  README.md
crates/smbcloud-gresiq-sdk/src/: client.rs  client_credentials.rs  error.rs  onde_apps.rs  smbcloud_gresiq_sdk.rs
crates/smbcloud-gresiq/src/: gresiq.rs  main.rs  rest.rs
crates/smbcloud-mail/: Cargo.toml  README.md
crates/smbcloud-mail/src/: mail_app.rs  mail_inbox.rs  mail_message.rs  smbcloud_mail.rs  url_builder.rs
crates/smbcloud-model/: Cargo.toml  README.md
crates/smbcloud-model/src/: account.rs  app_auth.rs  deploy_config.rs  deploy_config_update.rs  error_codes.rs  frontend_app.rs  github.rs  lib.rs  login.rs  mail.rs  oauth.rs  project.rs  repository.rs  reset_password_response.rs  runner.rs  signup.rs  tenant.rs
crates/smbcloud-network/: Cargo.toml  README.md
crates/smbcloud-network/src/: environment.rs  network.rs
crates/smbcloud-networking/: Cargo.toml  README.md
crates/smbcloud-networking-account/: Cargo.toml  README.md
crates/smbcloud-networking-account-wasm/: Cargo.toml  LICENSE  README.md
crates/smbcloud-networking-account-wasm/src/: lib.rs  login.rs  logout.rs  me.rs  remove.rs  signup.rs
crates/smbcloud-networking-account/src/: check_email.rs  lib.rs  login.rs  logout.rs  me.rs  oidc.rs  remove.rs  resend_email_verification.rs  resend_reset_password_instruction.rs  reset_password.rs  signup.rs  url_builder.rs
crates/smbcloud-networking-project/: Cargo.toml  README.md
crates/smbcloud-networking-project/src/: crud_deploy_repo_create.rs  crud_deployment_create.rs  crud_frontend_app_create.rs  crud_frontend_app_deploy_config.rs  crud_frontend_app_read.rs  crud_frontend_app_update_deploy_config.rs  crud_github_connection.rs  crud_project_create.rs  crud_project_delete.rs  crud_project_deployment_create.rs  crud_project_deployment_read.rs  crud_project_deployment_update.rs  crud_project_read.rs  crud_project_update.rs  lib.rs  request.rs  url_builder.rs
crates/smbcloud-networking/src/: constants.rs  lib.rs  network.rs  smb_client.rs
crates/smbcloud-s6n/: Cargo.toml  README.md
crates/smbcloud-utils/: Cargo.toml  README.md
crates/smbcloud-utils/src/: config.rs  lib.rs  write_config.rs
pypi/: README.md  pyproject.toml
sdk/gems/email/: .rubocop.yml  CHANGELOG.md  Cargo.toml  README.md  Rakefile  email.gemspec
sdk/python/: README.md  pyproject.toml
sdk/python/smbcloud_auth/: __init__.py
smbcloud-cli/: Cargo.toml  README.md
smbcloud-cli/src/: lib.rs  main.rs
smbcloud-cli/src/account/: lib.rs  mod.rs
smbcloud-cli/src/cli/: mod.rs
smbcloud-cli/src/deploy/: git.rs  mod.rs  smb_config.rs
smbcloud-cli/src/project/: init.rs  mod.rs
smbcloud-cli/src/ui/: mod.rs
smbcloud-model/: Cargo.toml  README.md
smbcloud-model/src/: account.rs
smbcloud-utils/: Cargo.toml
smbcloud-utils/src/: lib.rs
(+152 files in other folders)
