[workspace]
resolver = "2"
members = [
    "crates/smbcloud-cli",
    "crates/smbcloud-model",
    "crates/smbcloud-networking",
    "crates/smbcloud-networking-project",
    "crates/smbcloud-utils"
]

[workspace.dependencies]
anyhow = "1.0.58"
async-trait = "0.1.51"
chrono = "0.4"
clap = "4.1.6"
clap_mangen = "0.2.10"
console = "0.15.0"
dialoguer = "0.11.0"
git-url-parse = "0.4.5"
git2 = "0.20.1"
home = "0.5.4"
log = "0.4.14"
maybe-async = "0.2"
open = "4.0"
regex = "1.11"
serde = "1"
serde_json = "1.0.82"
serde_repr = "0.1"
smbcloud-networking-project = { version = "0.3.0", path = "crates/smbcloud-networking-project" }
smbcloud-utils = { version = "0.3.0", path = "crates/smbcloud-utils" }
smbcloud-model = { version = "0.3", path = "crates/smbcloud-model" }
smbcloud-networking = { version = "0.3", path = "crates/smbcloud-networking" }
spinners = "4.1.0"
ssh2-config = "0.5"
thiserror = "1.0.29"
toml = "0.8"
tokio = "1.44"
tracing = "0.1.35"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = "0.3.14"
url = "2"
url-builder = "0.1.1"
dirs = "5.0"
reqwest = "0.12"
