[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/gresiq",
    "crates/smbcloud-model",
    "crates/smbcloud-network",
    "crates/smbcloud-networking",
    "crates/smbcloud-networking-account",
    "crates/smbcloud-networking-account-wasm",
    "crates/smbcloud-networking-project",
    "crates/smbcloud-utils",
]

[workspace.dependencies]
anyhow = "1.0.58"
async-trait = "0.1.51"
chrono = "0.4"
clap = "4.1.6"
clap_mangen = "0.2.10"
console = "0.16"
dialoguer = "0.11.0"
dirs = "6.0"
git2 = "0.20.1"
home = "0.5.4"
indicatif = "0.17.11"
log = "0.4.14"
maybe-async = "0.2"
open = "5.3"
regex = "1.11"
reqwest = "0.12.18"
serde = "1"
serde_json = "1.0.82"
serde_repr = "0.1"
smbcloud-model = { version = "0.3", path = "crates/smbcloud-model" }
smbcloud-network = { version = "0.3.22", path = "crates/smbcloud-network" }
smbcloud-networking = { version = "0.3", path = "crates/smbcloud-networking" }
smbcloud-networking-account = { version = "0.3", path = "crates/smbcloud-networking-account" }
smbcloud-networking-project = { version = "0.3", path = "crates/smbcloud-networking-project" }
smbcloud-utils = { version = "0.3", path = "crates/smbcloud-utils" }
spinners = "4.1.0"
strum = "0.27"
strum_macros = "0.27"
tabled = "0.20"
thiserror = "2.0"
tokio = "1.44"
tokio-postgres = "0.7"
toml = "0.8"
tracing = "0.1.35"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = "0.3.14"
url-builder = "0.1.1"
wasm-bindgen = "0.2"
