[package]
name = "network"
version = "0.3.23"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smbcloud-model = { workspace = true }
wasm-bindgen = { workspace = true }
