[package]
name = "smbcloud-auth-sdk-apple"
version = "0.4.2"
edition = "2024"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Apple platform bindings for the smbCloud Auth SDK."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
publish = false

[lib]
name = "smbcloud_auth"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/smbcloud_auth_sdk_apple.rs"

[features]
bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]

[dependencies]
smbcloud-auth-sdk = { workspace = true }
smbcloud-model = { workspace = true }
smbcloud-network = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true, features = ["tokio"] }
