[package]
name = "smbcloud-auth-sdk-wasm"
version = "0.3.35"
edition = "2024"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Browser bindings for the smbCloud Auth SDK."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://smbcloud.xyz/posts"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "development-tools",
    "wasm",
]
readme = "README.md"

[lib]
# Pin the lib name so wasm-pack artifact filenames (smbcloud_auth_wasm.js etc.)
# remain stable regardless of the crate/directory rename.
name = "smbcloud_auth_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde-wasm-bindgen = "=0.6.5"
smbcloud-network = { workspace = true }
smbcloud-networking = { workspace = true }
smbcloud-auth-sdk = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.50"
