[package]
name = "smbcloud-auth-sdk"
version = "0.3.34"
edition = "2024"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Client SDK for smbCloud Auth — authenticate your users via smbCloud Auth service."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://smbcloud.xyz/posts"
keywords = ["auth", "oidc", "authentication", "smbcloud", "sdk"]
categories = ["authentication", "web-programming", "api-bindings"]
readme = "README.md"

[dependencies]
base64 = "0.22"
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
smbcloud-model = { workspace = true }
smbcloud-network = { workspace = true }
url-builder = { workspace = true }
uuid = { version = "1", features = ["v4"] }
