[package]
name = "smbcloud-auth-wasm"
version = "0.3.33"
edition = "2024"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Browser bindings for the smbCloud Auth SDK."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://docs.smbcloud.xyz/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "development-tools",
    "wasm",
]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde-wasm-bindgen = "=0.6.5"
smbcloud-network = { workspace = true }
smbcloud-networking = { workspace = true }
smbcloud-auth = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.50"
