[package]
name = "smbcloud-email-sdk"
version = "0.4.9"
edition = "2021"
description = "Rust client for the smbCloud transactional email API — send email from a verified domain and read delivery status."
license = "Apache-2.0"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
homepage = "https://smbcloud.xyz"
documentation = "https://docs.rs/smbcloud-email-sdk"
readme = "README.md"
keywords = ["smbcloud", "email", "transactional", "api", "mail"]
categories = ["api-bindings", "network-programming", "web-programming::http-client"]

[lib]
path = "src/smbcloud_email_sdk.rs"

[dependencies]
log = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
smbcloud-network = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
