[package]
name    = "smbcloud-gresiq-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust client for the smbCloud GresIQ REST gateway."

[lib]
path = "src/smbcloud_gresiq_sdk.rs"

[dependencies]
log        = { workspace = true }
reqwest    = { workspace = true, features = ["json", "rustls-tls"] }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["rt"] }
