[package]
name = "smbcloud-model"
version = "0.3.14"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for deploying NextJS app on the smbCloud platform."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://docs.smbcloud.xyz/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "development-tools",
    "wasm",
]
readme = "README.md"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
spinners = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
