[package]
name = "smbcloud-network"
version = "0.3.24"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smbcloud-model = { workspace = true }
wasm-bindgen = { workspace = true }
