[package]
name = "smbcloud-network"
version = "0.3.35"
edition = "2024"
readme = "README.md"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for deploying NextJS app on the smbCloud platform."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://smbcloud.xyz/posts"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "development-tools",
    "wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smbcloud-model = { workspace = true }
wasm-bindgen = { workspace = true }
