[package]
name = "smbcloud-networking-account-wasm"
version = "0.3.23"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
network = { workspace = true }
smbcloud-networking-account = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "=0.6.5"
