[package]
name = "smbcloud-networking-account"
version = "0.3.24"
edition = "2024"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for deploying NextJS app on the smbCloud platform."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://docs.smbcloud.xyz/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "development-tools",
    "wasm",
]
readme = "README.md"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
smbcloud-model = { workspace = true }
smbcloud-network = { workspace = true }
smbcloud-networking = { workspace = true }
