[package]
name = "smbcloud-networking-project"
version = "0.3.9"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for creating and managing smbcloud resources."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://docs.smbcloud.xyz/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = ["command-line-utilities", "command-line-interface", "cryptography::cryptocurrencies", "development-tools", "wasm"]
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
dirs = { workspace = true }
home = { workspace = true }
log = { workspace = true }
maybe-async = { workspace = true, features = ["is_sync"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smbcloud-model = { workspace = true }
smbcloud-networking = { workspace = true }
thiserror = { workspace = true }
