[package]
name = "smbcloud-networking"
version = "0.3.14"
edition = "2021"
readme = "README.md"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for deploying NextJS app on the smbCloud platform."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://docs.smbcloud.xyz/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "development-tools",
    "wasm",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env"] }
dirs = { workspace = true }
home = { workspace = true }
log = { workspace = true }
maybe-async = { workspace = true, features = ["is_sync"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smbcloud-model = { workspace = true }
thiserror = { workspace = true }
url-builder = { workspace = true }
