[package]
name = "smbcloud-networking"
version = "0.3.23"
edition = "2021"
readme = "README.md"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for deploying NextJS app on the smbCloud platform."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://docs.smbcloud.xyz/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "development-tools",
    "wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smbcloud-network = { workspace = true }
url-builder = { workspace = true }
