[package]
name = "smbcloud-networking"
version = "0.4.12"
edition = "2021"
readme = "README.md"
authors = ["Seto Elkahfi <seto@smbcloud.xyz>"]
description = "Command line tool for deploying NextJS app on the smbCloud platform."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://smbcloud.xyz/posts"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "development-tools",
    "wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smbcloud-network = { workspace = true }
url-builder = { workspace = true }
