[package]
name = "smbcloud-utils"
version = "0.3.9"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for creating and managing smbcloud resources."
license = "Apache-2.0"
repository = "https://github.com/smbcloudXYZ/smbcloud-cli"
documentation = "https://docs.smbcloud.xyz/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbcloud"]
categories = ["command-line-utilities", "command-line-interface", "cryptography::cryptocurrencies", "development-tools", "wasm"]
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
home = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smbcloud-model = { workspace = true }
